# osgocean

./: .gitignore  CLAUDE.md  CMakeLists.txt  RESOURCES.md  ROADMAP.md
include/osgOcean/: FFTSimulation  WaveSpectrum
include/osgOcean/shaders/: osgOcean_ocean_surface_frag.inl
resources/shaders/: osgOcean_ocean_surface.frag
src/oceanExample/: CMakeLists.txt  application.cpp
src/osgOcean/: CMakeLists.txt  FFTOceanTechnique.cpp  FFTSimulation.cpp  OceanTile.cpp  WaveSpectrum.cpp
tests/: CMakeLists.txt  bench_fft.cpp  run_gpu_test.cmake  test_fft_characterization.cpp
tests/golden/: fft_displacements_64_t1.txt  fft_heights_64_t1.txt
